# Hazmat

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: hazmat_keywords.yaml
data/output/: best_ensemble_config.json  labeling_metrics.json  pipeline_metrics.json  realtime_metrics.json  validation_results.json
data/processed/: embeddings_cache.parquet  labels_llm.csv  labels_llm.parquet
models/: category_encoder.joblib  drift_baseline.json  ensemble_threshold.joblib  ensemble_weights.joblib  feature_config.joblib  lightgbm.joblib  random_forest.joblib  xgboost.joblib
notebooks/: eda_hazmat.ipynb
prompts/: prompts_used.md
scripts/: classify_all.py  collect_data.py  finetune_embeddings.py  generate_labels.py  promote_model.py  realtime_test.py  register_prompts.py  train_model.py  tune_ensemble.py  validate_model.py
src/: api.py  canary.py  categories.py  collector.py  compat.py  dashboard.py  features.py  keywords.py  llm_fallback.py  model.py  observability.py  pipeline.py  schemas.py
tests/: conftest.py  test_api.py  test_keywords.py  test_model.py  test_pipeline.py
